# lwcell

./: .clang-format  .gitignore  .gitmodules  AUTHORS  CHANGELOG.md  CMakeLists.txt  README.md  library.json
dev/: lwcell_dev.vcxproj  lwcell_dev.vcxproj.filters  lwcell_opts.h  lwgsm_dev.vcxproj  lwgsm_opts.h  lwmem_opts.h  main.c
dev/VisualStudio/: gsm_at_lib_dev.sln  gsm_at_lib_dev.vcxproj  gsm_at_lib_dev.vcxproj.filters  gsm_config.h  gsm_opts.h  lwgsm_dev.sln  lwgsm_dev.vcxproj  (+5 more)
docs/: conf.py  doxy_gsm.doxy  doxyfile.doxy  index.rst
examples/win32/: CMakeLists.txt  CMakePresets.json  gsm_examples.sln
examples/win32/call_rtos/: CMakeLists.txt  call_rtos.vcxproj  call_rtos.vcxproj.filters  gsm_config.h  gsm_opts.h  lwcell_opts.h  lwgsm_opts.h  main.c
examples/win32/call_sms_rtos/: CMakeLists.txt  call_sms_rtos.vcxproj  call_sms_rtos.vcxproj.filters  gsm_config.h  gsm_opts.h  lwcell_opts.h  lwgsm_opts.h  main.c
examples/win32/device_info_rtos/: CMakeLists.txt  device_info_rtos.vcxproj  device_info_rtos.vcxproj.filters  gsm_config.h  gsm_opts.h  lwgsm_opts.h  main.c
examples/win32/mqtt_client_api_rtos/: CMakeLists.txt  gsm_config.h  lwcell_opts.h  lwgsm_opts.h  main.c  mqtt_client_api_rtos.vcxproj  mqtt_client_api_rtos.vcxproj.filters
examples/win32/netconn_client_rtos/: CMakeLists.txt  gsm_config.h  gsm_opts.h  lwcell_opts.h  lwgsm_opts.h  main.c  netconn_client_rtos.vcxproj  netconn_client_rtos.vcxproj.filters
examples/win32/sms_send_receive_rtos/: CMakeLists.txt  gsm_config.h  lwcell_opts.h  lwgsm_opts.h  main.c  sms_send_receive_rtos.vcxproj  sms_send_receive_rtos.vcxproj.filters
lwcell/: CMakeLists.txt  library.cmake
lwcell/src/api/: lwcell_netconn.c  lwcell_network_api.c
lwcell/src/apps/mqtt/: lwcell_mqtt_client.c  lwcell_mqtt_client_api.c  lwcell_mqtt_client_evt.c
lwcell/src/include/lwcell/: lwcell.h  lwcell_buff.h  lwcell_call.h  lwcell_conn.h  lwcell_debug.h  lwcell_debug_types.h  lwcell_device_info.h  lwcell_evt.h  lwcell_ftp.h  lwcell_http.h  lwcell_includes.h  lwcell_input.h  lwcell_int.h  lwcell_mem.h  lwcell_memories.h  lwcell_models.h  lwcell_mqtt.h  lwcell_netconn.h  lwcell_network.h  lwcell_network_api.h  lwcell_operator.h  lwcell_opt.h  lwcell_opts_template.h  lwcell_parser.h  lwcell_pbuf.h  lwcell_phonebook.h  lwcell_ping.h  lwcell_private.h  lwcell_sim.h  lwcell_sms.h  lwcell_threads.h  lwcell_timeout.h  lwcell_types.h  lwcell_unicode.h  lwcell_ussd.h  lwcell_utils.h
lwcell/src/include/lwcell/apps/: lwcell_apps.h  lwcell_mqtt_client.h  lwcell_mqtt_client_api.h  lwcell_mqtt_client_evt.h
lwcell/src/include/system/: lwcell_ll.h  lwcell_sys.h
lwcell/src/include/system/port/cmsis_os/: lwcell_sys_port.h
lwcell/src/include/system/port/freeRTOS/: lwcell_sys_port.h
lwcell/src/include/system/port/threadx/: lwcell_sys_port.h
lwcell/src/include/system/port/win32/: lwcell_sys_port.h
lwcell/src/lwcell/: lwcell.c  lwcell_buff.c  lwcell_call.c  lwcell_conn.c  lwcell_debug.c  lwcell_device_info.c  lwcell_evt.c  lwcell_ftp.c  lwcell_http.c  lwcell_input.c  lwcell_int.c  lwcell_mem.c  lwcell_mqtt.c  lwcell_network.c  lwcell_operator.c  lwcell_parser.c  lwcell_pbuf.c  lwcell_phonebook.c  lwcell_ping.c  lwcell_sim.c  lwcell_sms.c  lwcell_threads.c  lwcell_timeout.c  lwcell_unicode.c  lwcell_ussd.c  lwcell_utils.c
lwcell/src/system/: lwcell_ll_esp32.c  lwcell_ll_stm32.c  lwcell_ll_stm32f429zi_nucleo.c  lwcell_ll_stm32h735g_dk_threadx.c  lwcell_ll_win32.c  lwcell_mem_lwmem.c  lwcell_mem_threadx.c  lwcell_sys_cmsis_os.c  lwcell_sys_freeRTOS.c  lwcell_sys_threadx.c  lwcell_sys_win32.c
lwgsm/: CMakeLists.txt
lwgsm/src/api/: lwgsm_netconn.c  lwgsm_network_api.c
lwgsm/src/apps/mqtt/: lwgsm_mqtt_client.c  lwgsm_mqtt_client_api.c  lwgsm_mqtt_client_evt.c
lwgsm/src/include/lwgsm/: lwgsm.h  lwgsm_buff.h  lwgsm_call.h  lwgsm_clock.h  lwgsm_conn.h  lwgsm_debug.h  lwgsm_debug_types.h  lwgsm_device_info.h  lwgsm_evt.h  lwgsm_fs.h  lwgsm_ftp.h  lwgsm_http.h  lwgsm_includes.h  lwgsm_input.h  lwgsm_int.h  lwgsm_ip_app.h  lwgsm_mem.h  lwgsm_memories.h  lwgsm_models.h  lwgsm_mqtt.h  lwgsm_netconn.h  lwgsm_network.h  lwgsm_network_api.h  lwgsm_operator.h  lwgsm_opt.h  lwgsm_opts_template.h  lwgsm_parser.h  lwgsm_pbuf.h  lwgsm_phonebook.h  lwgsm_ping.h  lwgsm_private.h  lwgsm_sim.h  lwgsm_sms.h  lwgsm_ssl.h  lwgsm_threads.h  lwgsm_timeout.h  lwgsm_typedefs.h  lwgsm_types.h  lwgsm_unicode.h  lwgsm_ussd.h  (+1 more)
lwgsm/src/include/lwgsm/apps/: lwgsm_apps.h  lwgsm_mqtt_client.h  lwgsm_mqtt_client_api.h  lwgsm_mqtt_client_evt.h
lwgsm/src/include/system/: lwgsm_ll.h  lwgsm_sys.h
lwgsm/src/include/system/port/cmsis_os/: lwgsm_sys_port.h
lwgsm/src/include/system/port/freeRTOS/: lwgsm_sys_port.h
lwgsm/src/include/system/port/template/: lwgsm_sys_port.h
lwgsm/src/include/system/port/threadx/: lwgsm_sys_port.h
lwgsm/src/include/system/port/win32/: lwgsm_sys_port.h
lwgsm/src/lwgsm/: lwgsm.c  lwgsm_buff.c  lwgsm_call.c  lwgsm_clock.c  lwgsm_conn.c  lwgsm_debug.c  lwgsm_device_info.c  lwgsm_evt.c  lwgsm_fs.c  lwgsm_ftp.c  lwgsm_http.c  lwgsm_input.c  lwgsm_int.c  lwgsm_ip_app.c  lwgsm_mem.c  lwgsm_mqtt.c  lwgsm_network.c  lwgsm_operator.c  lwgsm_parser.c  lwgsm_pbuf.c  lwgsm_phonebook.c  lwgsm_ping.c  lwgsm_sim.c  lwgsm_sms.c  lwgsm_ssl.c  lwgsm_threads.c  lwgsm_timeout.c  lwgsm_unicode.c  lwgsm_ussd.c  lwgsm_utils.c
lwgsm/src/system/: lwgsm_ll_esp32.c  lwgsm_ll_stm32.c  lwgsm_ll_stm32f429zi_nucleo.c  lwgsm_ll_stm32h735g_dk_threadx.c  lwgsm_ll_template.c  lwgsm_ll_win32.c  lwgsm_mem_lwmem.c  lwgsm_mem_threadx.c  lwgsm_sys_cmsis_os.c  lwgsm_sys_freeRTOS.c  lwgsm_sys_template.c  lwgsm_sys_threadx.c  lwgsm_sys_win32.c
snippets/: CMakeLists.txt  call.c  call_sms.c  client.c  device_info.c  examples_common_lwgsm_callback_func.c  mqtt_client_api.c  netconn_client.c  network_utils.c  sim_manager.c  sms_send_receive.c  sms_send_receive_thread.c
snippets/include/: call.h  call_sms.h  client.h  device_info.h  examples_common_lwgsm_callback_func.h  mqtt_client_api.h  network_apn_settings.h  network_utils.h  sim_manager.h  sms_send_receive.h  sms_send_receive_thread.h
(+347 files in other folders)
